# sequence-rgb-vizualizer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: compiler_warnings.cmake
examples/: advanced_example.cpp  basic_example.cpp  functor_source_example.cpp
include/srgbviz/colormap/: bytepart_scale.hpp  grayscale.hpp  icolormap.hpp
include/srgbviz/datasource/: functor_source.hpp  idatasource.hpp  matrix_source.hpp  vector_source.hpp
include/srgbviz/datasource/detail/: cache_source.hpp
include/srgbviz/io/: console_writer.hpp  ppm_writer.hpp  ppm_writer_stream.hpp  video_writer.hpp
include/srgbviz/pipeline/: generator.hpp
include/srgbviz/pipeline/detail/: generator.tpp
include/srgbviz/types/: rgb.hpp
src/: bytepart_scale.cpp  console_writer.cpp  grayscale.cpp  ppm_writer.cpp  ppm_writer_stream.cpp  video_writer.cpp
